crash calculating tangent space data on degenerate geometry #36685

Closed
opened 2013-09-08 20:00:20 +02:00 by Sam Vila · 4 comments

%%%--- Operating System, Graphics card ---
W7, 64 bit. GTX460

- Blender version with error, and version that worked ---

2.68a official, 2.67 official and maybe other old versions as well.

- Short description of error ---

If you render frame 73 or 75 then everything is OK but on frame 74 it crashes, I had the same problem on frame 24. If you turn off the procedural texture then it renders just fine.
So I think there´s some problem between textures set up as normal maps and the bake fluid data on that frame,
the rest of the frames are usually fine but I get the same crash in other frames as frame #24 as well.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

See above.

%%%

%%%--- Operating System, Graphics card --- W7, 64 bit. GTX460 - Blender version with error, and version that worked --- 2.68a official, 2.67 official and maybe other old versions as well. - Short description of error --- If you render frame 73 or 75 then everything is OK but on frame 74 it crashes, I had the same problem on frame 24. If you turn off the procedural texture then it renders just fine. So I think there´s some problem between textures set up as normal maps and the bake fluid data on that frame, the rest of the frames are usually fine but I get the same crash in other frames as frame #24 as well. - Steps for others to reproduce the error (preferably based on attached .blend file) --- See above. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author
%%%https://docs.google.com/file/d/0BzLq20Y55riOemltZ1E1aEdoTnM/edit?usp=sharing%%%

%%%fixed r59943.%%%

%%%fixed r59943.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36685
No description provided.