fix [#36685] crash calculating tangent space data on degenerate geometry

the error was that the range check was done on the float before converting to an int.
now convert to and int first and ensure a valid range on that.